--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: A sleek, modern Jekyll theme for personal websites.
-description: A sleek, modern Jekyll theme for personal websites. Personal is the perfect theme for developers, designers and other creatives.
-featured_image: /images/demo/home.jpg
+title: Sound Design and Creative Technology 
+description: Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield UK.
+featured_image: /images/jono/me_modular.jpg
 ---
 
 <section class="hero">
