--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ featured_image: /images/jono/me_modular.jpg
 
 	<div class="wrap">
 
-		<h1>A sleek, modern Jekyll theme
-		for personal websites</h1>
-		<p>Personal is the perfect theme for developers, designers and other creatives.</p>
+		<h1>Sound Design and Creative Technology </h1>
+		<p>TEST TEST.</p>
 
 		{% include socials.html %}
 
