--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Sound Design and Creative Technology 
-description: Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield UK.
+description: 
 featured_image: /images/jono/me_modular.jpg
 ---
 
@@ -14,7 +14,7 @@ featured_image: /images/jono/me_modular.jpg
 	<div class="wrap">
 
 		<h1>Sound Design and Creative Technology </h1>
-		<p>TEST TEST.</p>
+		<p>Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield UK.</p>
 
 		{% include socials.html %}
 
