--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ featured_image: /images/jono/me_modular.jpg
 
 	<div class="wrap">
 
-		<h1>  </h1>
+		<h1> Projects </h1>
 		<p>Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield UK.</p>
 
 		{% include socials.html %}
