--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ featured_image: /images/jono/me_modular.jpg
 	<div class="wrap">
 
 		<h1> Projects </h1>
-		<p>Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield UK. 
+		<p>Hello, I'm Jono, a Sound Designer, Creative Technologist and Community Arts Practitioner based in Sheffield, UK. 
 Here are some of my recent projects. </p>
 
 		{% include socials.html %}
